fixed resource id of en and zh

--- a/i18n/en.toml
+++ b/i18n/en.toml
@@ -34,10 +34,10 @@ other = "All brand names and product names appearing on this site are registered
 [See_also]
 other = "See also"
 
-[Tips]
+[Title_tips]
 other = "Tips"
 
-[Note]
+[Title_note]
 other = "Note"
 
 [Title_references]
