GCRequest-88nokekka wo

--- a/i18n/en.toml
+++ b/i18n/en.toml
@@ -29,7 +29,7 @@ other = "Go back to top page"
 other = "Articles in this category"
 
 [Footer_copyright]
-other = "All brand names and product names appearing on this site are registered trademarks or trademarks of Cybozu."
+other = "The names of the services and products used herein are the registered trademarks or trademarks of their respective companies."
 
 [See_also]
 other = "See also"
