--- a/i18n/zh-tw.toml
+++ b/i18n/zh-tw.toml
@@ -46,3 +46,8 @@ other = "相關頁面"
 [Title_caution]
 other = "注意"
 
+[og_desc1]
+other = "{{$.Site.Params.product_name}}的{{.Site.Params.help}}。"
+
+[og_desc2]
+other = "介紹使用{{.Site.Params.product_name}}所需的設定及使用方法。"
