--- a/i18n/zh-tw.toml
+++ b/i18n/zh-tw.toml
@@ -46,8 +46,35 @@ other = "相關頁面"
 [Title_caution]
 other = "注意"
 
+[By_features]
+other = "Search by Features"
+
+[Top_page]
+other = "Top"
+
+[Read_more]
+other = "More"
+
+[Was_it_helpful]
+other = "Was this information helpful?"
+
+[Yes]
+other = "Yes"
+
+[No]
+other = "No"
+
+[Permalink]
+other = "Permalink"
+
+[MT_Disclaimer]
+other = "Machine-Translations Disclaimer"
+
 [og_desc1]
-other = "{{$.Site.Params.product_name}}的{{.Site.Params.help}}。"
+other = "This is the {{$.Site.Params.help}} for {{$.Site.Params.product_name}}."
+
+[og_desc1_service]
+other = "This is the {{$.Site.Params.help}} for {{$.Site.Params.product_name}} {{$.Site.Params.service_type}}. "
 
 [og_desc2]
-other = "介紹使用{{.Site.Params.product_name}}所需的設定及使用方法。"
+other = "This guide describes how to set up and operate {{$.Site.Params.product_name}}."
