--- a/i18n/zh.toml
+++ b/i18n/zh.toml
@@ -79,3 +79,9 @@ other = "{{$.Site.Params.service_type}} {{$.Site.Params.product_name}}的{{.Site
 [og_desc2]
 other = "介绍使用{{$.Site.Params.product_name}}所需的设置和操作方法。"
 
+[search]
+other = "搜索"
+
+[search_word]
+other = "搜索词"
+
