--- a/i18n/ja.toml
+++ b/i18n/ja.toml
@@ -64,6 +64,9 @@ other = "はい"
 [No]
 other = "いいえ"
 
+[Close]
+other = "閉じる"
+
 [Permalink]
 other = "固定リンク"
 
@@ -93,3 +96,36 @@ other = "パンくずリスト"
 
 [Page_selection]
 other = "ページ選択"
+
+[Copy_parma_link]
+other = "固定リンクをコピーします"
+
+[Link_was_copied]
+other = "固定リンクがコピーされました"
+
+[Help_site]
+other = "ヘルプサイト"
+
+[Article_number]
+other = "記事番号"
+
+[Article_number_search]
+other = "記事番号検索"
+
+[Input_article_number]
+other = "記事番号を入力してください。"
+
+[ID_error_1]
+other = "4桁以上の数字を入力してください。"
+
+[ID_error_2]
+other = "記事番号は数字で入力してください。"
+
+[ID_error_3]
+other = "該当する記事番号は存在しません。"
+
+[ID_error_4]
+other = "接続がタイムアウトしました。"
+
+[ID_error_5]
+other = "ネットワークエラーが発生しました。"
