modified error message

--- a/i18n/ja.toml
+++ b/i18n/ja.toml
@@ -116,7 +116,7 @@ other = "記事番号検索"
 other = "記事番号を入力してください。"
 
 [ID_error_1]
-other = "4桁以上の数字を入力してください。"
+other = "数字は4桁以上で入力してください。"
 
 [ID_error_2]
 other = "記事番号は数字で入力してください。"
