--- a/i18n/ja.toml
+++ b/i18n/ja.toml
@@ -122,7 +122,7 @@ other = "数字は4桁以上で入力してください。"
 other = "記事番号は数字で入力してください。"
 
 [ID_error_3]
-other = "該当する記事番号は存在しません。"
+other = "該当する記事番号はありません。"
 
 [ID_error_4]
 other = "接続がタイムアウトしました。"
