--- a/i18n/en.toml
+++ b/i18n/en.toml
@@ -98,7 +98,7 @@ other = "bread crumb"
 other = "page selection"
 
 [Copy_parma_link]
-other = "Copy the parmanet link."
+other = "Copy the parmanent link."
 
 [Link_was_copied]
 other = "The parmanent link has been copied."
