--- a/i18n/ja.toml
+++ b/i18n/ja.toml
@@ -97,7 +97,7 @@ other = "パンくずリスト"
 [Page_selection]
 other = "ページ選択"
 
-[Copy_parma_link]
+[Copy_perma_link]
 other = "固定リンクをコピーします"
 
 [Link_was_copied]
