Help_siteの値を修正する

--- a/i18n/en.toml
+++ b/i18n/en.toml
@@ -110,7 +110,7 @@ other = "Copy"
 other = "The content has been copied."
 
 [Help_site]
-other = "Help Site"
+other = "Documentation Site"
 
 [Article_number]
 other = "Article Number"
