--- a/i18n/ja.toml
+++ b/i18n/ja.toml
@@ -144,3 +144,15 @@ other = "非対応のWebブラウザです。"
 
 [Unsupported_message]
 other = "一部の機能が正常に動作しない場合があります。"
+
+[Locale_modal_message]
+other = "タイトル"
+
+[Locale_modal_description]
+other = "なにか説明"
+
+[Locale_modal_not_current_text]
+other = "cybozu.com ヘルプサイトに移動する"
+
+[Locale_modal_current_text]
+other = "Kintone ヘルプサイトを見る"
