--- a/i18n/zh.toml
+++ b/i18n/zh.toml
@@ -145,3 +145,14 @@ other = "不支持此Web浏览器。"
 [Unsupported_message]
 other = "部分功能可能运行异常。"
 
+[Locale_modal_message]
+other = ""
+
+[Locale_modal_description]
+other = ""
+
+[Locale_modal_not_current_text]
+other = ""
+
+[Locale_modal_current_text]
+other = ""
