--- a/i18n/en.toml
+++ b/i18n/en.toml
@@ -148,11 +148,8 @@ other = "Some functions may not work correctly."
 [Locale_modal_message]
 other = ""
 
-[Locale_modal_description]
-other = ""
+[Locale_modal_button_yes]
+other = "Yes"
 
-[Locale_modal_not_current_text]
-other = ""
-
-[Locale_modal_current_text]
-other = ""
+[Locale_modal_button_no]
+other = "No"
