--- a/i18n/zh.toml
+++ b/i18n/zh.toml
@@ -148,11 +148,8 @@ other = "部分功能可能运行异常。"
 [Locale_modal_message]
 other = ""
 
-[Locale_modal_description]
-other = ""
+[Locale_modal_button_yes]
+other = "有"
 
-[Locale_modal_not_current_text]
-other = ""
-
-[Locale_modal_current_text]
-other = ""
+[Locale_modal_button_no]
+other = "没有"
