--- a/i18n/zh-tw.toml
+++ b/i18n/zh-tw.toml
@@ -148,10 +148,10 @@ other = "不支持此Web瀏覽器。"
 other = "部分功能可能運行異常。"
 
 [Locale_modal_message]
-other = ""
+other = "This site is intended for customers outside Japan.<br>Would you like to visit a site for Japan customers?"
 
 [Locale_modal_button_yes]
-other = "是"
+other = "Yes"
 
 [Locale_modal_button_no]
-other = "否"
+other = "No"
