--- a/i18n/zh.toml
+++ b/i18n/zh.toml
@@ -146,10 +146,10 @@ other = "不支持此Web浏览器。"
 other = "部分功能可能运行异常。"
 
 [Locale_modal_message]
-other = ""
+other = "This site is intended for customers outside Japan.<br>Would you like to visit a site for Japan customers?"
 
 [Locale_modal_button_yes]
-other = "有"
+other = "Yes"
 
 [Locale_modal_button_no]
-other = "没有"
+other = "No"
