--- a/i18n/zh-tw.toml
+++ b/i18n/zh-tw.toml
@@ -149,3 +149,6 @@ other = "部分功能可能運行異常。"
 
 [Locale_modal_message]
 other = "本網站適用於日本國外的客戶。<br>您是否要前往適用於日本國內的網站？"
+
+[Header_nav_faq]
+other = "Frequently Asked Questions"
