--- a/i18n/ja.toml
+++ b/i18n/ja.toml
@@ -147,3 +147,6 @@ other = "一部の機能が正常に動作しない場合があります。"
 
 [Locale_modal_message]
 other = "このページは、日本国外のお客様向けです。<br>日本のお客様に適したページに移動しますか？"
+
+[Header_nav_faq]
+other = "よくあるご質問"
