--- a/i18n/es.toml
+++ b/i18n/es.toml
@@ -29,7 +29,7 @@ other = "Volver a la página de inicio"
 other = "Artículos de esta categoría"
 
 [Footer_copyright]
-other = "Los nombres de los servicios y productos aquí utilizados son marcas registradas o marcas comerciales de sus respectivas empresas."
+other = "Los nombres de los servicios y productos utilizados en este documento son marcas comerciales registradas o marcas comerciales de sus respectivas empresas."
 
 [See_also]
 other = "See also"
