--- a/i18n/es.toml
+++ b/i18n/es.toml
@@ -110,7 +110,7 @@ other = "Copy"
 other = "The content has been copied."
 
 [Help_site]
-other = "Help Site"
+other = "Sitio de ayuda"
 
 [Article_number]
 other = "Article Number"
