Remove unnecessary sentence

--- a/i18n/es.toml
+++ b/i18n/es.toml
@@ -29,7 +29,7 @@ other = "Volver a la página de inicio"
 other = "Artículos de esta categoría"
 
 [Footer_copyright]
-other = "Los nombres de los productos y servicios utilizados en el presente portal son marcas comerciales o marcas registradas de sus respectivas empresas. No vender ni compartir mis datos personales."
+other = "Los nombres de los productos y servicios utilizados en el presente portal son marcas comerciales o marcas registradas de sus respectivas empresas."
 
 [See_also]
 other = "See also"
