--- a/i18n/es.toml
+++ b/i18n/es.toml
@@ -88,6 +88,12 @@ other = "buscar"
 [search_word]
 other = "search word"
 
+[search_bing]
+other = "Emhanced by Bing"
+
+[search_bing_legal]
+other = "Microsoft Privacy Statement"
+
 [Document_type]
 other = "menu"
 
