--- a/i18n/ja.toml
+++ b/i18n/ja.toml
@@ -89,7 +89,7 @@ other = "検索"
 other = "検索ワード"
 
 [search_bing]
-other = "Emhanced by Bing"
+other = "Enhanced by Bing"
 
 [search_bing_legal]
 other = "Microsoft Privacy Statement"
