--- a/i18n/zh.toml
+++ b/i18n/zh.toml
@@ -89,7 +89,7 @@ other = "搜索"
 other = "搜索词"
 
 [search_bing]
-other = "Emhanced by Bing"
+other = "Enhanced by Bing"
 
 [search_bing_legal]
 other = "Microsoft Privacy Statement"
