kintonehelp-1811_4 【簡体字】フッターの修正

--- a/i18n/zh.toml
+++ b/i18n/zh.toml
@@ -29,7 +29,7 @@ other = "返回页首"
 other = "此类别中的内容"
 
 [Footer_copyright]
-other = "记载的商品名称、各产品名称都为各公司的注册商标或商标。 ©Cybozu"
+other = "所记载的商品名称及各商品名均为各公司的注册商标或商标。©Cybozu"
 
 [See_also]
 other = "另请参阅下一页"
